--- a/t.html
+++ b/t.html
@@ -39,6 +39,10 @@
             overflow-x: hidden;
         }
 
+        #page-content {
+            display: none; /* Conteúdo fica oculto até o preloader sumir */
+        }
+        
         section {
             position: relative;
             padding: 100px 5%;
@@ -109,11 +113,11 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            transition: opacity 0.8s ease;
+            transition: opacity 0.8s ease, visibility 0.8s ease;
         }
         #preloader.loaded {
             opacity: 0;
-            pointer-events: none;
+            visibility: hidden; /* Garante que não interfira com cliques */
         }
         .sigil-container {
             width: 120px;
@@ -480,22 +484,22 @@
             <h2>A Guilda</h2>
             <div class="equipe-grid">
                  <div class="membro">
-                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=1" alt="Avatar Membro 1"></div>
+                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=11" alt="Avatar Membro 1"></div>
                     <h3>Kael, o Arquiteto</h3>
                     <p>Mestre Desenvolvedor</p>
                 </div>
                 <div class="membro">
-                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=2" alt="Avatar Membro 2"></div>
+                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=32" alt="Avatar Membro 2"></div>
                     <h3>Lyra, a Forjadora</h3>
                     <p>Líder de Design</p>
                 </div>
                 <div class="membro">
-                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=3" alt="Avatar Membro 3"></div>
+                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=14" alt="Avatar Membro 3"></div>
                     <h3>Roric, o Sussurrante</h3>
                     <p>Estrategista de Marketing</p>
                 </div>
                 <div class="membro">
-                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=4" alt="Avatar Membro 4"></div>
+                    <div class="avatar-container"><img src="https://i.pravatar.cc/150?img=35" alt="Avatar Membro 4"></div>
                     <h3>Elara, a Oráculo</h3>
                     <p>Gerente de Projetos</p>
                 </div>
@@ -531,7 +535,67 @@
 
 
     <script>
+        // --- CÓDIGO JAVASCRIPT CORRIGIDO ---
+
+        // O evento 'DOMContentLoaded' é disparado assim que o HTML da página é carregado,
+        // sem esperar por imagens. Isso torna o site muito mais rápido e confiável.
         document.addEventListener('DOMContentLoaded', () => {
 
-            // --- LÓGICA DO PRELOADER ---
-            const preloader = document.getEleme
+            const preloader = document.getElementById('preloader');
+            const pageContent = document.getElementById('page-content');
+
+            // 1. Esconde o preloader e mostra o conteúdo da página
+            // Adicionamos um pequeno delay para a animação do preloader ser visível.
+            setTimeout(() => {
+                preloader.classList.add('loaded');
+                pageContent.style.display = 'block';
+            }, 500);
+
+
+            // --- LÓGICA DE ANIMAÇÃO COM SCROLL (FADE-IN) ---
+            const sections = document.querySelectorAll('.fade-in-section');
+            const observerOptions = {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.15 
+            };
+
+            const observer = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('is-visible');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, observerOptions);
+
+            sections.forEach(section => {
+                observer.observe(section);
+            });
+
+
+            // --- LÓGICA DO FORMULÁRIO DE CONTATO ---
+            const contactForm = document.getElementById('contact-form');
+            const formResponse = document.getElementById('form-response');
+
+            contactForm.addEventListener('submit', (e) => {
+                e.preventDefault();
+                formResponse.style.color = 'var(--cor-destaque-principal)';
+                formResponse.textContent = 'Enviando transmissão...';
+
+                // Simulação de envio
+                setTimeout(() => {
+                    formResponse.style.color = 'var(--cor-destaque-secundaria)';
+                    formResponse.textContent = 'O sinal foi recebido. Aguarde nosso corvo.';
+                    contactForm.reset();
+
+                    setTimeout(() => {
+                        formResponse.textContent = '';
+                    }, 5000); 
+                }, 2000);
+            });
+        });
+    </script>
+
+</body>
+</html>
